--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
         <h3>Esse site é sobre Melancias saborosas🍉</h3>
         <p>Bem Vindo</p>
         <p id="visitante" class="nomeVisitante">Aguardando...</p>
-        <a href="https://brasilescola.uol.com.br/frutas/melancia.htm"><img src="Melância.jpg" alt=""></a>
+        <a href="https://brasilescola.uol.com.br/frutas/melancia.htm"><img src="melância.jpg" alt=""></a>
         <br>
         <a href="https://brasilescola.uol.com.br/frutas/melancia.htm">Clique no link</a>
         <h3>Cadastro</h3>
